--- a/AppDemo/appsettings.json
+++ b/AppDemo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-IFLAFRS\\SQLEXPRESS;Initial Catalog=DbDemoUsers;Integrated Security=True;Pooling=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "StoredFilesPath": "c:\\files",
+  "FileSizeLimit": 2097152
 }
+
+
