--- a/AppDemo/appsettings.json
+++ b/AppDemo/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-IFLAFRS\\SQLEXPRESS;Initial Catalog=DbDemoUsers;Integrated Security=True;Pooling=False"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "StoredFilesPath": "c:\\files",
-  "FileSizeLimit": 2097152
+  "AllowedHosts": "*"
 }
-
-
